test/simple/correct/FloatUnaryMinus.hs
module FloatUnaryMinus where

main :: Float
main = -.2.5

