test/simple/typeerrors/Examples/ExprNegateResult.hs
module ExprNegateResult where

f :: Bool
f = - 13
